--- a/app/src/main/res/layout/activity_lets_gym_menu.xml
+++ b/app/src/main/res/layout/activity_lets_gym_menu.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/btnRetLets"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -56,10 +56,10 @@
                 android:layout_height="37dp"
                 android:layout_marginTop="15dp"
                 android:background="@android:color/transparent"
-                app:layout_constraintBottom_toBottomOf="@+id/imageButton"
+                app:layout_constraintBottom_toBottomOf="@+id/btnRetLets"
                 app:layout_constraintEnd_toStartOf="@+id/imageButton5"
                 app:layout_constraintHorizontal_bias="0.895"
-                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintStart_toEndOf="@+id/btnRetLets"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0"
                 app:srcCompat="@drawable/ic_monitor"
@@ -79,7 +79,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+                app:layout_constraintTop_toBottomOf="@+id/btnRetLets" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -91,7 +91,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/textView5">
 
                 <Button
-                    android:id="@+id/btnEvery"
+                    android:id="@+id/btnYes"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
