--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -171,7 +171,7 @@
                                     android:textSize="13sp"
                                     app:layout_constraintBottom_toBottomOf="@+id/textView4"
                                     app:layout_constraintStart_toEndOf="@+id/textView4"
-                                    app:layout_constraintTop_toBottomOf="@+id/imageButton3"
+                                    app:layout_constraintTop_toBottomOf="@+id/btnWorkMode"
                                     app:layout_constraintVertical_bias="1.0" />
 
                                 <TextView
@@ -213,14 +213,14 @@
                                     android:elevation="5dp"
                                     app:layout_constraintEnd_toEndOf="parent"
                                     app:layout_constraintHorizontal_bias="1.0"
-                                    app:layout_constraintStart_toEndOf="@+id/imageButton3"
+                                    app:layout_constraintStart_toEndOf="@+id/btnWorkMode"
                                     app:layout_constraintTop_toTopOf="parent"
                                     app:srcCompat="@drawable/ic_majesticons_door_exit"
                                     tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,ImageContrastCheck"
                                     tools:srcCompat="@drawable/ic_majesticons_door_exit" />
 
                                 <ImageButton
-                                    android:id="@+id/imageButton3"
+                                    android:id="@+id/btnWorkMode"
                                     android:layout_width="70dp"
                                     android:layout_height="70dp"
                                     android:layout_marginStart="24dp"
@@ -435,7 +435,7 @@
                     </LinearLayout>
 
                     <Button
-                        android:id="@+id/button"
+                        android:id="@+id/btnLetsGym"
                         android:layout_width="wrap_content"
                         android:layout_height="34dp"
                         android:layout_gravity="center"
